# projC

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
include/projC/: projC_global.h  projc.h
src/: CMakeLists.txt  projc.cpp
